--- a/static/index.html
+++ b/static/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>E-kirjasto 503</title>
+    <title>E-kirjasto static</title>
     <style>
         body {
             display: flex;
